Write PNG image to clipboardData as File.

--- a/app/window.html
+++ b/app/window.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <canvas id="canvas" width="300" height="200"></canvas>
-    <input id="text-field" type="text">
+    <input id="text-field" type="text" value="some text">
     <button id="copy">copy</button>
     <button id="paste">paste</button>
     <span id="last-event"></span>
